[ADD] login template + authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.password=
 
 ################### Hibernate Configuration ##########################
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+logging.level.org.springframework.security=DEBUG
+
 
